fix: fix golden tests.

--- a/charts/zeebe-benchmark/test/golden/benchmark-config.golden.yaml
+++ b/charts/zeebe-benchmark/test/golden/benchmark-config.golden.yaml
@@ -11,13 +11,4 @@ metadata:
     app.kubernetes.io/managed-by: Helm
 data: 
   benchmark-config.yaml: | 
-    zeebe.broker.data.diskUsageCommandWatermark: "0.8"
-    zeebe.broker.data.diskUsageReplicationWatermark: "0.9"
-    zeebe.broker.executionMetricsExporterEnabled: "true"
-    zeebe.broker.experimental.consistencyChecks.enableForeignKeyChecks: "true"
-    zeebe.broker.experimental.consistencyChecks.enablePreconditions: "true"
-    zeebe.broker.exporters.elasticsearch.args.index.indexSuffixDatePattern: yyyy-MM-dd_HH
-    zeebe.broker.flowControl.write.enabled: "true"
-    zeebe.broker.flowControl.write.limit: 4000
-    zeebe.gateway.monitoring.enabled: "true"
-    zeebe.gateway.threads.managementThreads: "1"
+    null
