--- a/charts/zeebe-benchmark/test/golden/golden-existing-credential-secret-workers.golden.yaml
+++ b/charts/zeebe-benchmark/test/golden/golden-existing-credential-secret-workers.golden.yaml
@@ -67,3 +67,59 @@ spec:
           ports:
             - containerPort: 9600
               name: "http"
+---
+# Source: zeebe-benchmark/templates/workers.yaml
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: image-worker
+  labels:
+    app: image-worker
+spec:
+  selector:
+    matchLabels:
+      app: image-worker
+  replicas: 3
+  template:
+    metadata:
+      labels:
+        app: image-worker
+        app.kubernetes.io/component: zeebe-client
+    spec:
+      containers:
+        - name: image-worker
+          image: "gcr.io/zeebe-io/worker:SNAPSHOT"
+          imagePullPolicy: Always
+          env:
+            - name: JDK_JAVA_OPTIONS
+              value: >-
+                -Dconfig.override_with_env_vars=true
+                -Dapp.tls=true
+                -Dzeebe.client.requestTimeout=62000
+                -Dapp.worker.pollingDelay=1ms
+                -Dapp.worker.completionDelay=50ms
+                -Dapp.worker.workerName="image"
+                -XX:+HeapDumpOnOutOfMemoryError
+            - name: ZEEBE_ADDRESS
+              valueFrom:
+                secretKeyRef:
+                  name: secret-name
+                  key: zeebeAddress
+            - name: ZEEBE_CLIENT_ID
+              valueFrom:
+                secretKeyRef:
+                  name: secret-name
+                  key: clientId
+            - name: ZEEBE_CLIENT_SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: secret-name
+                  key: clientSecret
+            - name: ZEEBE_AUTHORIZATION_SERVER_URL
+              valueFrom:
+                secretKeyRef:
+                  name: secret-name
+                  key: authServer
+          ports:
+            - containerPort: 9600
+              name: "http"
