--- a/charts/zeebe-benchmark/test/golden/publisher.golden.yaml
+++ b/charts/zeebe-benchmark/test/golden/publisher.golden.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
         - name: publisher
-          image: "gcr.io/zeebe-io/starter:SNAPSHOT"
+          image: "/starter:"
           imagePullPolicy: Always
           env:
             - name: JDK_JAVA_OPTIONS
