--- a/charts/zeebe-benchmark/test/golden/workers.golden.yaml
+++ b/charts/zeebe-benchmark/test/golden/workers.golden.yaml
@@ -52,6 +52,42 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  name: image-worker
+  labels:
+    app: image-worker
+spec:
+  selector:
+    matchLabels:
+      app: image-worker
+  replicas: 3
+  template:
+    metadata:
+      labels:
+        app: image-worker
+        app.kubernetes.io/component: zeebe-client
+    spec:
+      containers:
+        - name: image-worker
+          image: "gcr.io/zeebe-io/worker:SNAPSHOT"
+          imagePullPolicy: Always
+          env:
+            - name: JDK_JAVA_OPTIONS
+              value: >-
+                -Dconfig.override_with_env_vars=true
+                -Dapp.brokerUrl=benchmark-test-core:26500
+                -Dzeebe.client.requestTimeout=62000
+                -Dapp.worker.pollingDelay=1ms
+                -Dapp.worker.completionDelay=50ms
+                -Dapp.worker.workerName="image"
+                -XX:+HeapDumpOnOutOfMemoryError
+          ports:
+            - containerPort: 9600
+              name: "http"
+---
+# Source: zeebe-benchmark/templates/workers.yaml
+apiVersion: apps/v1
+kind: Deployment
+metadata:
   name: otherWorker-worker
   labels:
     app: otherWorker-worker
