--- a/charts/zeebe-benchmark/templates/starter.yaml
+++ b/charts/zeebe-benchmark/templates/starter.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: starter
-          image: "{{ .Values.starter.image.repository }}/starter:{{ .Values.starter.image.tag }}"
+          image: "{{ .Values.global.image.repository }}/starter:{{ .Values.global.image.tag }}"
           imagePullPolicy: {{ .Values.global.image.pullPolicy }}
           env:
             - name: JDK_JAVA_OPTIONS
