--- a/charts/zeebe-benchmark/test/golden/timer.golden.yaml
+++ b/charts/zeebe-benchmark/test/golden/timer.golden.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
         - name: timer
-          image: "/starter:"
+          image: "gcr.io/zeebe-io/starter:SNAPSHOT"
           imagePullPolicy: Always
           env:
             - name: JDK_JAVA_OPTIONS
